src/objects/Payment_Schedule__c.object
<CustomObject>
    <description>Object used to capture the payment schedules against Quote. This will be managed by Yardi and will be pushed to Salesforce.</description>
    <fields>
        <fullName>BilledAmount__c</fullName>
        <label>BilledAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_From__c</fullName>
        <label>Charge From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_To__c</fullName>
        <label>Charge To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <label>Property Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Payment Schedules</relationshipLabel>
        <relationshipName>Payment_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tenant_Code__c</fullName>
        <label>Tenant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>Charge_To__c-Charge_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Payment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_update_when_qoute_under_approval</fullName>
        <active>false</active>
        <description>Cannot update record if quote status is under approval.</description>
        <errorConditionFormula>AND( $Profile.Name !=&apos;System Administrator&apos;, OR(ISPICKVAL(Quote__r.Status ,&quot;Approved&quot;),ISPICKVAL(Quote__r.Status ,&quot;Under Approval&quot;),
ISPICKVAL(Quote__r.Status ,&quot;Synched&quot;),
ISPICKVAL(Quote__r.Status ,&quot;Accepted&quot;)))</errorConditionFormula>
        <errorMessage>Cannot update the payment schedules when quote is under DOA approval.</errorMessage>
    </validationRules>
</CustomObject>